--- a/src/css/login.css
+++ b/src/css/login.css
@@ -5,7 +5,7 @@
   position: relative;
 }
 
-.box {
+.loginPage .box {
   width: 350px;
   padding: 30px;
   background-color: #ddd;
@@ -14,15 +14,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
 
-  .top {
-    font-size: 20px;
-    text-align: center;
-    margin-bottom: 25px;
-  }
+.loginPage .top {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 25px;
+}
 
-  .ant-btn-primary {
-    width: 100%;
-    height: 100%;
-  }
+.loginPage .ant-btn-primary {
+  width: 100%;
+  height: 100%;
 }
